--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.10.0",
     "@clerk/nextjs": "^4.27.2",
     "@hello-pangea/dnd": "^16.3.0",
     "@prisma/client": "^6.1.0",
